--- a/public/style.css
+++ b/public/style.css
@@ -23,7 +23,7 @@ button {
   border-radius: 4px;
 }
 
-.top-container {
+.nav {
   display: flex;
   flex-direction: column;
   padding: 10px;
@@ -32,19 +32,19 @@ button {
   margin-bottom: 10px;
 }
 
-.user {
+.nav__user {
   display: flex;
   flex: 1;
   justify-content: end;
   margin: 0 400px;
 }
 
-.user-btn {
+.nav__btn {
   padding: 10px;
   color: white;
 }
 
-.heading {
+.head {
   display: flex;
   flex: 1;
   margin: 0 400px;
@@ -56,44 +56,28 @@ button {
   border-radius: 8px;
 }
 
-.heading > div {
+.head__container {
   display: flex;
   flex: 1;
   justify-content: start;
 }
 
-.heading > div > button {
-  font-size: 30px;
-}
-
-.heading-btn {
+.head__btn {
   font-size: 20px;
   padding: 20px;
   color: rgb(156, 120, 0); 
 }
 
-/*Batch 1 sa schools*/
-
-/* #services{
-  
-} */
-
-/* .services-list {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 40px;
-  margin-top: 50px;
-} */
-
 .sub-title {
   margin: 20px;
+  text-align: center;
 }
 
-.body-container {
+.container {
   display: flex;
 }
 
-.filter {
+.container__filter {
   display: flex;
   flex-direction: column;
   width: 400px;
@@ -101,40 +85,34 @@ button {
   padding: 20px;
   margin: 0 40px;
   box-shadow: -1px 0px 5px 0px rgba(105, 105, 105, 0.5);
-  /* border: 2px solid green; */
 }
 
-.filter-btn {
-  margin-top: 10px;
-  height: 30px;
-}
-
-.sticky {
+.container__filter--sticky {
   position: -webkit-sticky;
   position: sticky;
   top: 70px;
   background-attachment: scroll;
 }
 
-.sticky + .fitler {
-  padding-top: 102px;
+.container__btn {
+  margin-top: 10px;
+  height: 30px;
 }
 
-.schools {
+.uni {
   display: flex;
   flex: 1;
   flex-direction: column;
   margin-bottom: 100px;
 }
 
-.services-list {
+.uni__list {
   display: flex;
   width: 1200px;
   margin-top: 30px;
-  /* border: 2px solid blue; */
 }
 
-.services-list div {
+/* .services-list div {
   height: 400px;
   width: auto;
   flex: 1;
@@ -147,7 +125,6 @@ button {
   box-sizing: border-box;
   box-shadow: 1px 2px 3px 4px rgba(224, 224, 224, 0.4);
   margin-right: 20px;
-  /* border: 2px solid red; */
 }
 
 @media screen and (max-width:990px) {
@@ -160,7 +137,6 @@ button {
   font-weight: 500;
   margin-bottom: 15px;
   text-align: center;
-  /* border: 2px solid red; */
 }
 
 .services-list div a {
@@ -174,4 +150,4 @@ button {
 .services-list div:hover {
   background: rgb(255, 217, 147);
   transform: translate(-10px);
-}
+} */
