--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,6 @@
 * {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   padding: 0;
   margin: 0;
 }
@@ -14,6 +15,11 @@ button {
   background-color: rgb(255, 223, 163);
   border: 0;
   border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: rgb(209, 181, 129);
 }
 
 .nav {
@@ -32,33 +38,48 @@ button {
   margin: 0 400px;
 }
 
-.nav__btn {
+.nav__user__link {
   padding: 10px;
   color: white;
+  font-weight: 600;
+  text-decoration: none;
 }
 
-.head {
+.nav__user__link:hover {
+  text-decoration: underline;
+}
+
+/* Navbar */
+
+.navbar {
   display: flex;
   flex: 1;
+  gap: 20px;
   margin: 0 400px;
-  padding: 5px;
-  justify-content: end;
+  padding: 10px 20px;
+  justify-content: flex-start;
   align-items: center;
   box-shadow: -1px 0px 5px 0px rgba(211, 210, 210, 0.5);
   background-color: rgb(255, 251, 214);
   border-radius: 8px;
 }
 
-.head__container {
-  display: flex;
-  flex: 1;
-  justify-content: start;
+.navbar__btn {
+  font-size: 30px;
+  justify-self: flex-start;
+  margin-right: auto;
+  padding: 5px 20px;
+  font-weight: 700;
 }
 
-.head__btn {
+.navbar__link {
   font-size: 20px;
-  padding: 20px;
-  color: rgb(156, 120, 0); 
+  color: rgb(156, 120, 0);
+  text-decoration: none;
+}
+
+.navbar__link:hover {
+  color: rgb(233, 182, 14);
 }
 
 .sub-title {
