--- a/public/style.css
+++ b/public/style.css
@@ -57,11 +57,15 @@ button:hover {
   gap: 20px;
   margin: 0 400px;
   padding: 10px 20px;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   box-shadow: -1px 0px 5px 0px rgba(211, 210, 210, 0.5);
   background-color: rgb(255, 251, 214);
   border-radius: 8px;
+}
+
+.unifi {
+  width: 100px;
 }
 
 .navbar__btn {
@@ -72,7 +76,16 @@ button:hover {
   font-weight: 700;
 }
 
-.navbar__link {
+.navbar__links,
+.footer__links {
+  display: flex;
+  gap: 10px;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.navbar__link,
+.footer__link {
   font-size: 20px;
   color: rgb(156, 120, 0);
   text-decoration: none;
@@ -135,22 +148,41 @@ button:hover {
   display: flex;
 }
 
-/* .services-list div h2 {
-  font-size: 30px;
-  font-weight: 500;
-  margin-bottom: 15px;
+/* FOOTER */
+
+footer {
+  background-color:rgb(255, 166, 0);
+}
+
+footer .top {
+  height: 200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 100px;
+}
+
+footer img {
+  margin: 0 400px;
+}
+
+footer .footer__links {
+  display: flex;
+  flex-direction: column;
+  margin: 0 400px;
+}
+
+footer .footer__link {
+  color: black;
+}
+
+footer .copyright {
+  padding: 10px;
+  background-color: rgb(255, 185, 54);
+}
+
+footer h3 {
+  font-size: 12px;
+  color: rgb(0, 0, 0);
   text-align: center;
 }
- 
-.services-list div a {
-  text-decoration: none;
-  color: #fff;
-  font-size: 12px;
-  margin-top: 20px;
-  display: inline-block;
-}
- 
-.services-list div:hover {
-  background: rgb(255, 217, 147);
-  transform: translate(-10px);
-} */
